color the app and bring bootstrap to angular. Styled login,dashboard and user management

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
-<nav>
-  <app-return-to-dashboard></app-return-to-dashboard><app-logout></app-logout>
-</nav>
+<div class="container mb-5" role="main">
+  <app-app-navigation></app-app-navigation>
+</div>
 <div class="container">
   <router-outlet></router-outlet>
 </div>
