--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,3 +1,43 @@
+<div class="row justify-content-center">
+  <div class="col-md-8">
+    <div class="card-group">
+      <div class="card bg-light p-4">
+        <div class="card-body text-dark">
+          <h1>Login</h1>
+          <p class="text-muted">Sign in to your account to track your project working time!</p>
+
+          <form [formGroup]="loginForm" (ngSubmit)="login()">
+            <div class="row">
+              <div class="col">
+                <div class="form-group">
+                  <label for="username">Username:</label>
+                  <input id="username" type="text" name="username" formControlName="username" class="form-control"/>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col">
+                <div class="form-group">
+                  <label for="password">Password:</label>
+                  <input id="password" type="password" name="password" formControlName="password" class="form-control"/>
+                </div>
+              </div>
+            </div>
+
+            <div class="btn-group">
+              <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">
+                Login
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--
 <form (ngSubmit)="login()">
   <label>
     Username:
@@ -11,3 +51,4 @@
     Login
   </button>
 </form>
+-->
