--- a/frontend/src/app/components/project-management/project-management.component.html
+++ b/frontend/src/app/components/project-management/project-management.component.html
@@ -1,3 +1,34 @@
-<p>
-  project-list works!
-</p>
+<div class="container mb-5" role="main">
+  <div class="card bg-light">
+    <div class="card-body text-dark">
+      <a class="btn btn-outline-success navbar-btn" [routerLink]="'/project-form/'">New project</a>
+    </div>
+  </div>
+</div>
+
+<div class="card bg-light">
+  <div class="card-body">
+    <div class="col-md-12">
+      <div class="row">
+        <div *ngFor="let project of projects" class="col-4">
+
+          <div class="card text-dark">
+            <div class="card-header">
+              <strong>{{project.topic}}</strong>
+            </div>
+
+            <div class="card-body">
+              <strong>Project manager:</strong> <em>{{project.projectManager}}</em><br>
+              <strong>Total pl. hours:</strong> <em>{{project.totalPlannedHours}}</em><br>
+              <strong>Description:</strong> <em>{{project.description}}</em><br>
+              <div>
+                <a class="btn btn-outline-success" title="Edit" [routerLink]="'/project-form/' + project.id">Edit</a>
+                <button class="btn btn-dark" type="button" (click)="deleteProject(project)">Delete</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
