--- a/frontend/src/app/components/app-navigation/app-navigation.component.html
+++ b/frontend/src/app/components/app-navigation/app-navigation.component.html
@@ -5,7 +5,7 @@
       <!-- Navigation components -->
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-        <a class="navbar-brand" [routerLink]="'/dashboard/'">Delorian</a>
+        <a class="navbar-brand" [routerLink]="'/dashboard/'">Delorean</a>
 
         <!-- Component links -->
         <ul class="navbar-nav mr-auto">
