--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -26,7 +26,7 @@
             </div>
 
             <div class="btn-group">
-              <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">
+              <button type="submit" class="btn btn-info" [disabled]="loginForm.invalid">
                 Login
               </button>
             </div>
