--- a/frontend/src/app/components/app-navigation/app-navigation.component.html
+++ b/frontend/src/app/components/app-navigation/app-navigation.component.html
@@ -1,29 +1,67 @@
-<div class="card bg-light" *ngIf="isLoggedIn">
+<!--
+<div class="card bg-light " *ngIf="isLoggedIn">
   <div class="card-body text-dark">
     <div class="row page-header">
 
       <!-- Navigation components -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<!--
+      <nav class="navbar navbar-expand-lg navbar-dark">
 
         <a class="navbar-brand" [routerLink]="'/dashboard/'">Delorean</a>
 
         <!-- Component links -->
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item" *ngIf="isLoggedInAndAdmin">
+<!--
+        <ul class="navbar-nav justify-content-center">
+          <li class="nav-item " *ngIf="isLoggedInAndAdmin">
             <a class="nav-link" [routerLink]="'/user-management/'">User Management</a>
           </li>
 
-          <li class="nav-item" *ngIf="isLoggedInAndPrjMgr">
-            <a class="nav-link"[routerLink]="'/project-management/'">Project Management</a>
+          <li class="nav-item " *ngIf="isLoggedInAndPrjMgr">
+            <a class="nav-link" [routerLink]="'/project-management/'">Project Management</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item ">
             <a class="nav-link" [routerLink]="'/time-tracking/'">Time Tracking</a>
           </li>
         </ul>
 
         <!-- Logout -->
-        <button class="btn btn-outline-danger navbar-btn" type="button" (click)="logout()">Logout</button>
-     </nav>
+<!--
+        <button class="btn btn-outline-danger navbar-btn right" type="button" (click)="logout()">Logout</button>
+      </nav>
     </div>
   </div>
+</div> -->
+
+
+<div class="card bg-light top" *ngIf="isLoggedIn">
+  <div class="card-body text-dark">
+    <div class="container-fluid">
+
+      <!-- Navigation components -->
+
+      <nav class="navbar navbar-expand-lg navbar-dark justify-content-between">
+        <div class="col-1">
+          <a class="navbar-brand" [routerLink]="'/dashboard/'">Delorean</a>
+        </div>
+        <!-- Component links -->
+          <div class="navbar-nav">
+            <a class="nav-link" [routerLink]="'/user-management/'">User Management</a>
+          </div>
+
+          <div class="navbar-nav">
+            <a class="nav-link" [routerLink]="'/project-management/'">Project Management</a>
+          </div>
+
+          <div class="navbar-nav">
+            <a class="nav-link" [routerLink]="'/time-tracking/'">Time Tracking</a>
+          </div>
+        <!-- Logout -->
+
+        <div class="col-1">
+          <button class="btn btn-outline-danger navbar-btn right" type="button" (click)="logout()">Logout</button>
+        </div>
+      </nav>
+    </div>
+  </div>
+
 </div>
