--- a/frontend/src/app/components/project-management/project-management.component.html
+++ b/frontend/src/app/components/project-management/project-management.component.html
@@ -1,7 +1,7 @@
 <div class="container mb-5" role="main">
   <div class="card bg-light">
     <div class="card-body text-dark">
-      <a class="btn btn-outline-success navbar-btn" [routerLink]="'/project-form/'">New project</a>
+      <a class="btn btn-outline-info navbar-btn" [routerLink]="'/project-form/'">New project</a>
     </div>
   </div>
 </div>
