--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,4 +1,5 @@
 <div class="row justify-content-center">
+  <h2>DeLorean - Get Your Time</h2>
   <div class="col-md-8">
     <div class="card-group">
       <div class="card bg-light p-4">
@@ -9,7 +10,6 @@
         </div>
         <div class="shadow">
         </div>
-
 
         <div class="card-body text-dark">
           <h1>Login</h1>
