added project details

--- a/frontend/src/app/components/project-details/project-details.component.html
+++ b/frontend/src/app/components/project-details/project-details.component.html
@@ -13,4 +13,10 @@
 
     </div>
   </div>
+
+
+  <div class="card bg-light">
+    <app-time-tracking-list [alreadyTrackedTimes]="projectTimes" [projects]="projects"></app-time-tracking-list>
+  </div>
+
 </div>
