--- a/frontend/src/app/components/time-tracking-list/time-tracking-list.component.html
+++ b/frontend/src/app/components/time-tracking-list/time-tracking-list.component.html
@@ -14,6 +14,7 @@
             <tr>
               <th scope="col">Date</th>
               <th scope="col">Project</th>
+              <th scope="col">User</th>
               <th scope="col">Booked hours</th>
               <th scope="col">Action</th>
             </tr>
@@ -22,6 +23,7 @@
             <tr *ngFor="let timeTracking of alreadyTrackedTimes">
               <td>{{timeTracking.trackingDate | date: 'dd.MM.yyyy'}}</td>
               <td>{{getProjectTopic(timeTracking.projectID)}}</td>
+              <td>{{timeTracking.username}}</td>
               <td>{{timeTracking.workedHours}}</td>
               <td><button class="btn btn-dark" type="button" (click)="delete(timeTracking)">Delete</button></td>
             </tr>
