--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,2 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
+@font-face {
+  font-family: Warnes-2;
+  src: url(assets/fonts/Warnes-Regular.ttf);
+}
