--- a/frontend/src/app/components/app-navigation/app-navigation.component.html
+++ b/frontend/src/app/components/app-navigation/app-navigation.component.html
@@ -6,7 +6,7 @@
 
       <nav class="navbar navbar-expand-lg navbar-dark justify-content-between">
         <div class="col-1">
-          <a class="navbar-brand brand" [routerLink]="'/dashboard/'">Delorean</a>
+          <a class="navbar-brand brand" [routerLink]="'/dashboard/'">DELOREAN</a>
         </div>
         <!-- Component links -->
           <div class="navbar-nav">
