--- a/frontend/src/app/components/app-navigation/app-navigation.component.scss
+++ b/frontend/src/app/components/app-navigation/app-navigation.component.scss
@@ -2,26 +2,27 @@
   margin-top: 1%;
 }
 .brand {
-  // display: inline-block;
+  display: inline-block;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  //padding: 10px;
+  padding: 10px;
   border: none;
-  font: normal 24px/normal "Warnes", Helvetica, sans-serif;
+  font: normal 24px/normal "Warnes-2", Helvetica, sans-serif;
   color: rgba(255,255,255,1);
-  // text-decoration: normal;
-  // text-align: center;
+  text-decoration: normal;
+  text-align: center;
   -o-text-overflow: clip;
-  //text-overflow: clip;
+  text-overflow: clip;
   white-space: pre;
   text-shadow: 0 0 10px rgba(255,255,255,1) , 0 0 20px rgba(255,255,255,1) , 0 0 30px rgba(255,255,255,1) , 0 0 40px #ff00de , 0 0 70px #ff00de , 0 0 80px #ff00de , 0 0 100px #ff00de ;
-  //-webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
-  //-moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
-  //-o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+  -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+  -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+  -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
   transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
 }
 
 .brand:hover {
   text-shadow: 0 0 10px rgba(255,255,255,1) , 0 0 20px rgba(255,255,255,1) , 0 0 30px rgba(255,255,255,1) , 0 0 40px #00ffff , 0 0 70px #00ffff , 0 0 80px #00ffff , 0 0 100px #00ffff ;
 }
+
