--- a/frontend/src/app/components/user-management/user-management.component.html
+++ b/frontend/src/app/components/user-management/user-management.component.html
@@ -22,7 +22,7 @@
               <strong>Last name:</strong> <em>{{user.lastName}}</em><br>
               <div>
                 <a class="btn btn-outline-success" title="Edit" [routerLink]="'/user-form/' + user.username">Edit</a>
-                <button class="btn btn-dark" type="button" (click)="deleteUser(user)">Delete</button>
+                <button class="btn btn-outline-warning" type="button" (click)="deleteUser(user)">Delete</button>
               </div>
             </div>
           </div>
