--- a/frontend/src/app/components/project-detail/project-detail.component.html
+++ b/frontend/src/app/components/project-detail/project-detail.component.html
@@ -1,14 +1,10 @@
 <div class="container mb-5" role="main">
-  <div class="card bg-light">
-    <div class="card-body text-dark">
-      <a class="btn btn-outline-info navbar-btn" [routerLink]="'/project-management/'">Back</a>
-    </div>
-  </div>
-</div>
-
-<div class="container mb-5" role="main">
   <!--Show project-info -->
-  <app-project-info [project]="project" [showFullDetails]="true" [showButtonDetails]="false"></app-project-info>
+  <app-project-info [project]="project"
+                    [showFullDetails]="true"
+                    [totalBookedHours]="totalBookedHours"
+                    buttonLinkName="Back"
+                    buttonLink="/project-management"></app-project-info>
 
   <div class="card bg-light">
 
@@ -20,7 +16,7 @@
                 [colors]="chartColors"
                 [data]="chartData"
                 [labels]="chartLabels"
-                [chartType]="chartType"
+                chartType="doughnut"
                 (chartHover)="chartHovered($event)"
                 (chartClick)="chartClicked($event)">
         </canvas>
