added about page

--- a/frontend/src/app/components/app-navigation/app-navigation.component.html
+++ b/frontend/src/app/components/app-navigation/app-navigation.component.html
@@ -22,7 +22,8 @@
           </div>
         <!-- Logout -->
 
-        <div class="col-1">
+        <div class="col-2 btn-group-sm">
+          <button class="btn btn-outline-info navbar-btn right" type="button" [routerLink]="'/about/'">About</button>
           <button class="btn btn-outline-danger navbar-btn right" type="button" (click)="logout()">Logout</button>
         </div>
       </nav>
