--- a/frontend/src/app/components/about/about.component.html
+++ b/frontend/src/app/components/about/about.component.html
@@ -48,7 +48,7 @@
           <br><br>
           <p>
             <cite>
-              "Foahrt ganz schön ein der Huflattich."
+              "Ich mach des Design, weil ich bin"
             </cite>
           </p>
 
@@ -63,6 +63,7 @@
           <iframe src="https://ghbtns.com/github-btn.html?user=MrBrown1992&type=follow&count=true&size=large" frameborder="0" scrolling="0" width="220px" height="30px"></iframe>
         </div>
         <div class="col-4">
+          <p><cite>wicklich gut in CSS !!!</cite></p>
           <iframe src="https://ghbtns.com/github-btn.html?user=MrPink1992&type=follow&count=true&size=large" frameborder="0" scrolling="0" width="220px" height="30px"></iframe>
         </div>
       </div>
