--- a/frontend/src/app/components/project-info/project-info.component.html
+++ b/frontend/src/app/components/project-info/project-info.component.html
@@ -21,6 +21,7 @@
                 [datasets]="chartData"
                 legend="true"
                 chartType="bar"
+                [options]="options"
                 (chartHover)="chartHovered($event)"
                 (chartClick)="chartClicked($event)">
 
