changed some colors to fancy neon color :D

--- a/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/dashboard/dashboard.component.html
@@ -21,10 +21,11 @@
                       [datasets]="chartData"
                       [labels]="chartLabels"
                       [options]="chartOptions"
-                      legend="false"
+                      [colors]="chartColors"
+                      legend="true"
                       chartType="bar"
                       (chartHover)="chartHovered($event)"
-                      (chartClick)="chartClicked($event)">
+                      >
               </canvas>
         </div>
       </div>
