--- a/frontend/src/app/components/project-detail/project-detail.component.html
+++ b/frontend/src/app/components/project-detail/project-detail.component.html
@@ -17,8 +17,7 @@
                 [data]="chartData"
                 [labels]="chartLabels"
                 chartType="doughnut"
-                (chartHover)="chartHovered($event)"
-                (chartClick)="chartClicked($event)">
+                (chartHover)="chartHovered($event)">
         </canvas>
 
         <div class="card bg-light">
