--- a/frontend/src/app/components/project-info/project-info.component.html
+++ b/frontend/src/app/components/project-info/project-info.component.html
@@ -19,11 +19,9 @@
       <div class="col"  *ngIf="showFullDetails">
         <canvas baseChart
                 [datasets]="chartData"
-                [colors]="chartColors"
                 legend="true"
                 chartType="bar"
-                [options]="options"
-                (chartHover)="chartHovered($event)">
+                [options]="chartOptions">
 
         </canvas>
       </div>
