--- a/frontend/src/app/components/time-tracking-list/time-tracking-list.component.html
+++ b/frontend/src/app/components/time-tracking-list/time-tracking-list.component.html
@@ -1,9 +1,7 @@
 
   <div class="card">
     <div class="card-header pointerCursor"  (click)="toggleContent()">
-      <strong class="mb-0">
-          Already booked project times:
-      </strong>
+      <strong>{{trackingListHeader}}</strong>
     </div>
 
 
