added filter functionality

--- a/frontend/src/app/components/project-detail/project-detail.component.html
+++ b/frontend/src/app/components/project-detail/project-detail.component.html
@@ -24,6 +24,8 @@
 
         <div class="card bg-light">
           <app-time-tracking-list trackingListHeader="Details"
+                                  [showActionButtons]="false"
+                                  [currentRouteLink]="currentRouteLink"
                                   [alreadyTrackedTimes]="projectTimes"
                                   [projects]="[project]"></app-time-tracking-list>
         </div>
